--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
+    "click-outside-vue3": "^4.0.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "node-sass": "^9.0.0",
+    "sass-loader": "^14.1.1",
+    "vue": "^3.2.13",
+    "vue-i18n": "^9.11.0",
+    "vue-router": "^4.3.0",
+    "vue3-mq": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,8 +27,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   },
   "eslintConfig": {
     "root": true,
