Webpack & ContactMe page

--- a/package.json
+++ b/package.json
@@ -3,23 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "webpack serve --config config/webpack.dev.js",
+    "prod": "webpack --config config/webpack.prod.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "click-outside-vue3": "^4.0.1",
     "core-js": "^3.8.3",
-    "node-sass": "^9.0.0",
-    "sass-loader": "^14.1.1",
-    "vue": "^3.2.13",
+    "css-loader": "^7.1.1",
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
+    "eslint-loader": "^4.0.2",
+    "html-webpack-plugin": "^5.6.0",
+    "node-polyfill-webpack-plugin": "^3.0.0",
+    "postcss-loader": "^8.1.1",
+    "sass": "^1.75.0",
+    "sass-loader": "^14.2.0",
+    "vee-validate": "^4.12.6",
+    "vue": "^3.4.21",
     "vue-i18n": "^9.11.0",
+    "vue-loader": "^17.4.2",
     "vue-router": "^4.3.0",
-    "vue3-mq": "^3.2.0"
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.16",
+    "vue3-mq": "^3.2.0",
+    "vue3-toastify": "^0.2.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^5.10.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
