--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss-loader": "^8.1.1",
     "sass": "^1.75.0",
     "sass-loader": "^14.2.0",
+    "swiper": "^11.1.4",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
     "vue-i18n": "^9.11.0",
