Change fonts & package versions

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "webpack serve --config config/webpack.dev.js",
     "prod": "webpack --config config/webpack.prod.js",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "webpack --config config/webpack.prod.js",
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
@@ -16,14 +16,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "click-outside-vue3": "^4.0.1",
-    "core-js": "^3.8.3",
-    "css-loader": "^7.1.1",
+    "core-js": "^3.43.0",
+    "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
-    "eslint-loader": "^4.0.2",
-    "html-webpack-plugin": "^5.6.0",
+    "eslint-webpack-plugin": "^5.0.2",
+    "html-webpack-plugin": "^5.6.3",
+    "sass": "^1.89.2",
+    "sass-loader": "^16.0.5",
+    "postcss": "^8.5.6",
     "postcss-loader": "^8.1.1",
-    "sass": "^1.75.0",
-    "sass-loader": "^14.2.0",
     "swiper": "^11.1.4",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
@@ -33,21 +34,20 @@
     "vue-style-loader": "^4.1.3",
     "vue3-mq": "^3.2.0",
     "vue3-toastify": "^0.2.1",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "webpack-merge": "^5.10.0",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2",
+    "webpack-merge": "^6.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@babel/core": "^7.28.0",
+    "@babel/eslint-parser": "^7.28.0",
+    "@eslint/js": "^9.30.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint": "^9.30.1",
+    "eslint-plugin-vue": "^10.3.0",
+    "globals": "^16.3.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
   },
